adição da funcionalidade recuperar senha

--- a/.env
+++ b/.env
@@ -7,7 +7,20 @@ DB_NAME=bd_conecte
 DB_USER=root
 DB_PASS=
 
-SMTP_HOST=smtp.seuservidor.com
-SMTP_USER=seuemail@dominio.com
-SMTP_PASS=sua_senha
+SMTP_HOST=smtp.gmail.com
+SMTP_USER=williamsheilami@gmail.com
+SMTP_PASS="lziq sftu kvhe pgwa"
 SMTP_PORT=587
+SMTP_SECURE=tls
+SMTP_FROM=williamsheilami@gmail.com
+SMTP_FROM_NAME="Recuperação de Senha - Sistema PHP"
+
+# $smtp = [
+#     'host' => 'smtp.gmail.com',
+#     'port' => 587,
+#     'username' => 'williamsheilami@gmail.com',
+#     'password' => 'lziq sftu kvhe pgwa', // substitua pela senha de app do Gmail
+#     'secure' => 'tls',
+#     'from_email' => 'williamsheilami@gmail.com',
+#     'from_name' => 'Recuperação de Senha - Sistema PHP'
+# ];
