adição de proposta de serviço com envio de email e listagem de propostas

--- a/.env
+++ b/.env
@@ -13,7 +13,7 @@ SMTP_PASS="lziq sftu kvhe pgwa"
 SMTP_PORT=587
 SMTP_SECURE=tls
 SMTP_FROM=williamsheilami@gmail.com
-SMTP_FROM_NAME="Recuperação de Senha - Sistema PHP"
+SMTP_FROM_NAME="Sistema Connecte"
 
 # $smtp = [
 #     'host' => 'smtp.gmail.com',
